--- a/docs/03-pages/02-api-reference/02-functions/use-router.mdx
+++ b/docs/03-pages/02-api-reference/02-functions/use-router.mdx
@@ -443,6 +443,90 @@ export default function MyApp({ Component, pageProps }) {
 }
 ```
 
+## The `next/compat/router` export
+
+After Next.js 13, a new export `next/compat/router` is exposed to maintain compatibility with the old `next/router` API.
+This is the same `useRouter` hook but can be used in both `app` and `pages` directories.
+
+It differs from `next/router` in that it does not throw an error when the pages router is not mounted, and instead has a return type of `NextRouter | null`.
+This allows developers to convert components to support running in both `app` and `pages` as they update to Next.js 13 or transition to the `app` router.
+
+A component that previously looked like this:
+
+```jsx
+import { useRouter } from 'next/router'
+
+const MyComponent = () => {
+  const { isReady, query } = useRouter()
+  // ...
+}
+```
+
+Will error when converted over to `next/compat/router`, as `null` can not be destructured. Instead, developers will be able to take advantage of new hooks:
+
+```jsx
+import { useEffect } from 'react'
+import { useRouter } from 'next/compat/router'
+import { useSearchParams } from 'next/navigation'
+
+const MyComponent = () => {
+  const router = useRouter() // may be null or a NextRouter instance
+  const searchParams = useSearchParams()
+
+  useEffect(() => {
+    if (router && !router.isReady) {
+      return
+    }
+
+    // In `app/`, searchParams will be ready immediately with the values, in
+    // `pages/` it will be available after the router is ready.
+    const search = searchParams.get('search')
+    // ...
+  }, [router, searchParams])
+
+  // ...
+}
+```
+
+This component will now work in both `pages` and `app` directories. When the component is no longer used in `pages`, you can remove the references to the compat router:
+
+```jsx
+import { useSearchParams } from 'next/navigation'
+
+const MyComponent = () => {
+  const searchParams = useSearchParams()
+
+  // As this component is only used in `app/`, the compat router can be removed.
+  const search = searchParams.get('search')
+
+  // ...
+}
+```
+
+### Using `useRouter` outside of Next.js context in pages
+
+Another specific use case is when rendering components outside of a Next.js application context, such as inside `getServerSideProps` on the `pages` directory. In this case, the compat router can be used to avoid errors:
+
+```jsx
+import { renderToString } from 'react-dom/server'
+import { useRouter } from 'next/compat/router'
+
+const MyComponent = () => {
+  const router = useRouter() // may be null or a NextRouter instance
+  // ...
+}
+
+export async function getServerSideProps() {
+  const renderedComponent = renderToString(<MyComponent />)
+
+  return {
+    props: {
+      renderedComponent,
+    },
+  }
+}
+```
+
 ## Potential ESLint errors
 
 Certain methods accessible on the `router` object return a Promise. If you have the ESLint rule, [no-floating-promises](https://typescript-eslint.io/rules/no-floating-promises) enabled, consider disabling it either globally, or for the affected line.
