fix grammar, add more context on the next-router-not-mounted error

--- a/errors/next-router-not-mounted.mdx
+++ b/errors/next-router-not-mounted.mdx
@@ -14,7 +14,7 @@ If used in a test, mock out the router by mocking the `next/router`'s `useRouter
 
 If used in the `app` directory, migrate to the new hooks imported from `next/navigation`.
 
-If used in the `pages` directory, try to update the export to [`next/compat/router`](/docs/pages/api-reference/functions/use-router#the-next/compat/router-export). This is the same `useRouter` hook but does not throw this error, intented to be used while migration from `pages` to `app`.
+If used in the `pages` directory, try to update the export to [`next/compat/router`](/docs/pages/api-reference/functions/use-router#the-next/compat/router-export). This is the same `useRouter` hook but does not throw this error, intented to be used while migrating to Next.js 13 or from `pages` to `app`.
 
 ## Useful Links
 
