--- a/docs/03-pages/01-building-your-application/05-optimizing/10-testing.mdx
+++ b/docs/03-pages/01-building-your-application/05-optimizing/10-testing.mdx
@@ -432,8 +432,10 @@ setupFilesAfterEnv: ['<rootDir>/jest.setup.js']
 Then, inside `jest.setup.js`, add the following import:
 
 ```js filename="jest.setup.js"
-import '@testing-library/jest-dom/extend-expect'
+import '@testing-library/jest-dom'
 ```
+
+> [`extend-expect` was removed in `v6.0`](https://github.com/testing-library/jest-dom/releases/tag/v6.0.0), so if you are using `@testing-library/jest-dom` before version 6, you will need to import `@testing-library/jest-dom/extend-expect` instead.
 
 If you need to add more setup options before each test, it's common to add them to the `jest.setup.js` file above.
 
