--- a/docs/02-app/01-building-your-application/01-routing/06-loading-ui-and-streaming.mdx
+++ b/docs/02-app/01-building-your-application/01-routing/06-loading-ui-and-streaming.mdx
@@ -177,4 +177,4 @@ For more Suspense examples and use cases, please see the [React Documentation](h
 
 When streaming, a `200` status code will be returned to signal that the request was successful.
 
-The server can still communicate errors or issues to the client within the streamed content itself, for example, when using `redirect` or `notFound`. But will not update the status code of the response.
+The server can still communicate errors or issues to the client within the streamed content itself, for example, when using [`redirect`](/docs/app/api-reference/functions/redirect) or [`notFound`](/docs/app/api-reference/functions/not-found). Since the response headers have already been sent to the client, the status code of the response cannot be updated.
