Break up long sentence

--- a/docs/02-app/02-api-reference/02-file-conventions/01-metadata/manifest.mdx
+++ b/docs/02-app/02-api-reference/02-file-conventions/01-metadata/manifest.mdx
@@ -67,4 +67,4 @@ export default function manifest() {
 
 ### Manifest Object
 
-The manifest object contains an extensive list of options that may be updated due to new web standards, for information on all the current options, refer to the `MetadataRoute.Manifest` type in your code editor if using [TypeScript](https://nextjs.org/docs/app/building-your-application/configuring/typescript#typescript-plugin) or see the [MDN](https://developer.mozilla.org/en-US/docs/Web/Manifest) docs.
+The manifest object contains an extensive list of options that may be updated due to new web standards. For information on all the current options, refer to the `MetadataRoute.Manifest` type in your code editor if using [TypeScript](https://nextjs.org/docs/app/building-your-application/configuring/typescript#typescript-plugin) or see the [MDN](https://developer.mozilla.org/en-US/docs/Web/Manifest) docs.
