--- a/docs/02-app/01-building-your-application/03-rendering/index.mdx
+++ b/docs/02-app/01-building-your-application/03-rendering/index.mdx
@@ -89,7 +89,7 @@ It may be helpful to think about module graphs as a visual representation of how
   height=""
 />
 
-The Network Boundary is defined with a React convention called "use client". There's also a "use server" convention, which tells React to do some computational work on the server.
+The Network Boundary is defined with a React convention called `"use client"`. There's also a `"use server"` convention, which tells React to do some computational work on the server.
 
 ## Building Hybrid Applications
 
