--- a/docs/02-app/01-building-your-application/03-rendering/02-client-components.mdx
+++ b/docs/02-app/01-building-your-application/03-rendering/02-client-components.mdx
@@ -66,7 +66,7 @@ export default function Counter() {
 >
 > You can define multiple "use client" entry points in your React Component tree. This allows you to split your application into multiple client bundles (or branches).
 >
-> However, `"use client"` doesn't need to be defined in every component that needs to be rendered on the client. Once you define the boundary, all components and modules imported into it, or in other words, the branch in the tree is considered part of the client bundle.
+> However, `"use client"` doesn't need to be defined in every component that needs to be rendered on the client. Once you define the boundary, all components and modules imported into it are considered part of the client bundle.
 
 ## How are Client Components Rendered?
 
@@ -99,6 +99,6 @@ This means the Client Component JavaScript bundle is downloaded and parsed. Once
 
 ## Going back to the Server Environment
 
-Sometimes, after you've declared the ``"use client"` boundary, you may want to go back to the server environment. For example, you may want to reduce the client bundle size, fetch data on the server, or use an API that is only available on the server.
+Sometimes, after you've declared the `"use client"` boundary, you may want to go back to the server environment. For example, you may want to reduce the client bundle size, fetch data on the server, or use an API that is only available on the server.
 
 You can keep code on the server even though it's theoretically nested inside Client Components by interleaving Client and Server Components and Server Actions. See the [Composition Patterns](/docs/app/building-your-application/rendering/composition-patterns) page for more information.
