--- a/docs/02-app/01-building-your-application/03-rendering/03-composition-patterns.mdx
+++ b/docs/02-app/01-building-your-application/03-rendering/03-composition-patterns.mdx
@@ -12,7 +12,7 @@ Here's a quick summary of the different use cases for Server and Client Componen
 
 | What do you need to do?                                                            | Server Component    | Client Component    |
 | ---------------------------------------------------------------------------------- | ------------------- | ------------------- |
-| Fetch data.                                                                        | <Check size={18} /> | <Cross size={18} /> |
+| Fetch data                                                                         | <Check size={18} /> | <Cross size={18} /> |
 | Access backend resources (directly)                                                | <Check size={18} /> | <Cross size={18} /> |
 | Keep sensitive information on the server (access tokens, API keys, etc)            | <Check size={18} /> | <Cross size={18} /> |
 | Keep large dependencies on the server / Reduce client-side JavaScript              | <Check size={18} /> | <Cross size={18} /> |
