--- a/docs/02-app/02-api-reference/04-functions/use-selected-layout-segments.mdx
+++ b/docs/02-app/02-api-reference/04-functions/use-selected-layout-segments.mdx
@@ -54,7 +54,7 @@ export default function ExampleClientComponent() {
 const segments = useSelectedLayoutSegments(parallelRoutesKey?: string)
 ```
 
-`useSelectedLayoutSegments` accepts *optionally* a [`parallelRoutesKey`](docs/app/building-your-application/routing/parallel-routes#useselectedlayoutsegments), which allows you to read the active segment within that slot.
+`useSelectedLayoutSegments` *optionally* accepts a [`parallelRoutesKey`](/docs/app/building-your-application/routing/parallel-routes#useselectedlayoutsegments), which allows you to read the active route segment within that slot.
 s.
 
 ## Returns
