--- a/docs/02-app/02-api-reference/04-functions/use-selected-layout-segment.mdx
+++ b/docs/02-app/02-api-reference/04-functions/use-selected-layout-segment.mdx
@@ -42,7 +42,7 @@ export default function ExampleClientComponent() {
 const segment = useSelectedLayoutSegment(parallelRoutesKey?: string)
 ```
 
-`useSelectedLayoutSegment` *optionally* accepts a [`parallelRoutesKey`](/docs/app/building-your-application/routing/parallel-routes#useselectedlayoutsegments), which allows you to read the active route segment within that slot.
+`useSelectedLayoutSegment` _optionally_ accepts a [`parallelRoutesKey`](/docs/app/building-your-application/routing/parallel-routes#useselectedlayoutsegments), which allows you to read the active route segment within that slot.
 
 ## Returns
 
