--- a/docs/02-app/01-building-your-application/03-rendering/index.mdx
+++ b/docs/02-app/01-building-your-application/03-rendering/index.mdx
@@ -38,20 +38,12 @@ Understanding these differences is key to effectively using React and Next.js. W
 
 Broadly speaking, all websites follow the same **Request-Response Lifecycle**:
 
-<Image
-  alt="Request-Response Lifecycle"
-  srcLight="/docs/light/request-response-lifecycle.png"
-  srcDark="/docs/dark/request-response-lifecycle.png"
-  width=""
-  height=""
-/>
-
 1. **User Action:** The user interacts with a web application. This could be clicking a link, submitting a form, or typing a URL directly into the browser's address bar.
 2. **HTTP Request:** The client sends an [HTTP](https://developer.mozilla.org/en-US/docs/Web/HTTP) request to the server that contains necessary information about what resources are being requested, what method is being used (e.g. `GET`, `POST`), and additional data if necessary.
 3. **Server:** The server processes the request and responds with the appropriate resources. This process may take a couple of steps like routing, fetching data, etc.
 4. **HTTP Response:** After processing the request, the server sends an HTTP response back to the client. This response contains a status code (which tells the client whether the request was successful or not) and requested resources (e.g. HTML, CSS, JavaScript, static assets, etc).
 5. **Client:** The client parses the resources to render the user interface.
-6. **User Interaction:** Once the user interface is rendered, the user can interact with it, and the whole process starts again.
+6. **User Action:** Once the user interface is rendered, the user can interact with it, and the whole process starts again.
 
 A major part of building a hybrid web application is deciding how to split the work in the lifecycle, and where to place the Network Boundary.
 
@@ -59,59 +51,27 @@ A major part of building a hybrid web application is deciding how to split the w
 
 In web development, the **Network Boundary** is a conceptual line that separates the different environments. For example, the client and the server, or the server and the data store.
 
-<Image
-  alt="Network Boundary"
-  srcLight="/docs/light/network-boundary.png"
-  srcDark="/docs/dark/network-boundary.png"
-  width=""
-  height=""
-/>
+{/* Diagram: Network Boundary */}
 
 In React, you choose where to place the client-server network boundary wherever it makes the most sense.
 
-Behind the scenes, the work is split into two parts: the **client module graph** and the **server module graph**. The client module graph contains all components that are executed on the client, and the server module graph contains all the components that are executed on the server.
+Behind the scenes, the work is split into two parts: the **client module graph** and the **server module graph**. The server module graph contains all the components that are rendered on the server, and the client module graph contains all components that are rendered on the client.
 
-<Image
-  alt="Module Graph"
-  srcLight="/docs/light/server-client-module-graph.png"
-  srcDark="/docs/dark/server-client-module-graph.png"
-  width=""
-  height=""
-/>
+{/* Diagram: Client and Server Module Graphs */}
 
-It may be helpful to think about module graphs as a visual representation of how files in your application depend on each other. For example, if you have a file called `Page.jsx` that imports a file called `Button.jsx` on the server, the module graph would look something like this:
+It may be helpful to think about module graphs as a visual representation of how files in your application depend on each other.
 
-<Image
-  alt="Module Graph"
-  srcLight="/docs/light/module-graph-example.png"
-  srcDark="/docs/dark/module-graph-examples.png"
-  width=""
-  height=""
-/>
+{/* For example, if you have a file called `Page.jsx` that imports a file called `Button.jsx` on the server, the module graph would look something like this: - Diagram - */}
 
-The Network Boundary is defined with a React convention called `"use client"`. There's also a `"use server"` convention, which tells React to do some computational work on the server.
+You can use the React `"use client"` convention to define the boundary. There's also a `"use server"` convention, which tells React to do some computational work on the server while on the client.
 
 ## Building Hybrid Applications
 
-When building hybrid applications, it's helpful to think of the flow of the code in your application as **unidirectional**. In other words, your application code flows in one direction: from the server to the client.
+When working in these environments, it's helpful to think of the flow of the code in your application as **unidirectional**. In other words, during a response, your application code flows in one direction: from the server to the client.
 
-<Image
-  alt="One way data flow"
-  srcLight="/docs/light/one-way-data-flow.png"
-  srcDark="/docs/dark/one-way-data-flow.png"
-  width=""
-  height=""
-/>
+{/* Diagram: Response flow */}
 
-If you need to access the server from the client, you send a **new** request to the server rather than re-use the same request. This makes it easier to architect hybrid applications, and understand where you should place the Network Boundary.
-
-<Image
-  alt="Unidirectional Flow"
-  srcLight="/docs/light/unidirectional-flow.png"
-  srcDark="/docs/dark/unidirectional-flow.png"
-  width=""
-  height=""
-/>
+If you need to access the server from the client, you send a **new** request to the server rather than re-use the same request. This makes it easier understand where to render your components and where you to place the Network Boundary.
 
 In practice, this model encourages developers to think about what they want to execute on the server first, before sending the result to the client and making the application interactive.
 
