--- a/docs/02-app/02-api-reference/04-functions/fetch.mdx
+++ b/docs/02-app/02-api-reference/04-functions/fetch.mdx
@@ -55,8 +55,6 @@ export default async function Page() {
 
 Since Next.js extends the [Web `fetch()` API](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API), you can use any of the [native options available](https://developer.mozilla.org/en-US/docs/Web/API/fetch#parameters).
 
-Further, Next.js polyfills `fetch` on both the client and the server, so you can use fetch in both [Server and Client Components](/docs/getting-started/react-essentials).
-
 ### `options.cache`
 
 Configure how the request should interact with Next.js [Data Cache](/docs/app/building-your-application/caching#data-cache).
@@ -72,7 +70,7 @@ fetch(`https://...`, { cache: 'force-cache' | 'no-store' })
 
 > **Good to know**:
 >
-> - If you don't provide a `cache` option, Next.js will default to `force-cache`, unless a [dynamic function](/docs/app/building-your-application/rendering/static-and-dynamic#dynamic-functions) such as `cookies()` is used, in which case it will default to `no-store`.
+> - If you don't provide a `cache` option, Next.js will default to `force-cache`, unless a [dynamic function](/docs/app/building-your-application/rendering/server-components#server-rendering-strategies#dynamic-functions) such as `cookies()` is used, in which case it will default to `no-store`.
 > - The `no-cache` option behaves the same way as `no-store` in Next.js.
 
 ### `options.next.revalidate`
