--- a/docs/02-app/02-api-reference/04-functions/use-selected-layout-segment.mdx
+++ b/docs/02-app/02-api-reference/04-functions/use-selected-layout-segment.mdx
@@ -39,10 +39,10 @@ export default function ExampleClientComponent() {
 ## Parameters
 
 ```tsx
-const segment = useSelectedLayoutSegment()
+const segment = useSelectedLayoutSegment(parallelRoutesKey?: string)
 ```
 
-`useSelectedLayoutSegment` does not take any parameters.
+`useSelectedLayoutSegment` _optionally_ accepts a [`parallelRoutesKey`](/docs/app/building-your-application/routing/parallel-routes#useselectedlayoutsegments), which allows you to read the active route segment within that slot.
 
 ## Returns
 
