--- a/docs/02-app/02-api-reference/04-functions/use-selected-layout-segments.mdx
+++ b/docs/02-app/02-api-reference/04-functions/use-selected-layout-segments.mdx
@@ -51,10 +51,11 @@ export default function ExampleClientComponent() {
 ## Parameters
 
 ```tsx
-const segments = useSelectedLayoutSegments()
+const segments = useSelectedLayoutSegments(parallelRoutesKey?: string)
 ```
 
-`useSelectedLayoutSegments` does not take any parameters.
+`useSelectedLayoutSegments` _optionally_ accepts a [`parallelRoutesKey`](/docs/app/building-your-application/routing/parallel-routes#useselectedlayoutsegments), which allows you to read the active route segment within that slot.
+s.
 
 ## Returns
 
